deploy/k8s/iz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iz-deployment
spec:
  selector:
    matchLabels:
      app: webapp
      channel: <CHANNEL_NAME>
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp
        channel: <CHANNEL_NAME>
    spec:
      serviceAccountName: <CHANNEL_NAME>-ksa
      containers:
      - name: iz-webapp
        image:  europe-docker.pkg.dev/key-master-283113/iz-webapp/iz-webapp:v0.2.1-TEST
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /health/
            port: 8083
          initialDelaySeconds: 30
          failureThreshold: 10
          periodSeconds: 10
        volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
          - mountPath: /cert
            name: cert
            readOnly: true
        securityContext:
          runAsNonRoot: true
          runAsUser: 22222
          runAsGroup: 22222
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - NET_BIND_SERVICE
      - name: cloud-sql-proxy
        # It is recommended to use the latest version of the Cloud SQL proxy
        # Make sure to update on a regular schedule!
        image: eu.gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.13.0
        command:
          - "/cloud-sql-proxy"
          - "key-master-283113:europe-west1:informiz-beta"
        securityContext:
          runAsNonRoot: true
          capabilities:
            drop:
              - NET_RAW
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: cert
          secret:
            secretName: demo-channel-backend-cert
