deploy/k8s/iz-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iz-webapp-service
  annotations:
      cloud.google.com/app-protocols: '{"iz-secure-port":"HTTPS"}'
spec:
  type: NodePort
  selector:
    app: webapp
    channel: demo-channel
  ports:
  - name: iz-secure-port
    protocol: TCP
    port: 443
    targetPort: 8083
