deploy/k8s/iz-webapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iz-webapp-ingress
  annotations:
      kubernetes.io/ingress.global-static-ip-name: <CHANNEL_NAME>
      kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: ingress-cert-key
  rules:
  - host: <CHANNEL_NAME>.informiz.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: iz-webapp-service
          servicePort: iz-secure-port
